# lese_kobold

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  epic-template.md  user-story-template.md
lesekobold/resources/basic_vocab/: basic_vocabulary_grade_1_2.txt  basic_vocabulary_grade_3_4.txt
lesekobold/resources/prompt_examples/: prompts_angelin.md
lesekobold/resources/prompts/: content_prompt.md  judge_prompt.md  list_of_words_age_4_to_8.txt  preprocessing_prompt.md  story_prompt.md  story_prompt.txt  style_prompt.md  style_prompt_extended
lesekobold/resources/stories/: der-vorlesende-kobold.txt
lesekobold/resources/wordlists/: story_style_prompt_evaluation.txt
lesekobold/src/: agent.py  agent_manager.py  agent_settings.py  app.py  config.py  main.py  prompt_reader.py  readability_utils.py
lesekobold/src/core/: agent_manager.py  app.py  kobold_service.py  prompt_reader.py  readability_utils.py  session_manager.py
lesekobold/src/dataclasses/: agent_personas.py  agent_settings.py  api.py  story_model.py  story_settings.py
lesekobold/test/: test_agent.py  test_agent_settings.py
lesekobold/tests/pre_processor_agent/: agent.py
lesekobold/tests/test_agent/: __init__.py  agent.py
lesekobold/tests/ui_eval/: agent.py  root_agent.py
lesekobold/tests/unit_tests/: test_agent_manager.py  test_agent_pre_processor.py  test_lix.py  test_prompt_reader.py  test_readability_utils.py
lesekobold/tests/unit_tests/core/: test_agent_manager.py  test_agent_pre_processor.py  test_kobold_service.py  test_prompt_reader.py  test_readability_utils.py
lesekobold/tests/unit_tests/dataclasses/: test_agent_settings.py
lesekobold/tests/unit_tests/utils/: test_singleton.py
