[project]
name = "lesekobold"
version = "0.1.0"
description = ""
authors = [
    {name = "zarah.weiss",email = "zarah.weiss@nextory.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "google-adk (>=1.18.0,<2.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
